Alternative solution to double tap issue on iOS Safari

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -56,17 +56,15 @@
   font-weight: 400;
 
   .mdl-list__item-secondary-action {
-    display: none;
+    opacity: 0;
   }
 
   &--active,
   &:hover {
     color: $blue-900;
-  }
 
-  &--active {
     .mdl-list__item-secondary-action {
-      display: block;
+      opacity: 1;
     }
   }
 }
